--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ branches:
   - master
 
 before_script:
-  - npm install -g @angular/cli
+- cd site
+- npm install -g @angular/cli
 
 script:
 - ng lint
